# computer-graphics-in-game-development

./: .clang-format  .gitgnore  CMakeLists.txt  README.md
shaders/: shaders.hlsl
src/: resource.h  settings.cpp
src/renderer/: renderer.cpp  renderer.h
src/renderer/dx12/: dx12_renderer.cpp  dx12_renderer.h
src/renderer/rasterizer/: rasterizer.h  rasterizer_renderer.cpp
src/renderer/raytracer/: raytracer.h  raytracer_renderer.cpp  raytracer_renderer.h
src/utils/: error_handler.h  window.cpp  window.h
src/world/: camera.cpp  camera.h  model.cpp  model.h
